# LampPost

./: .env.development  .gitignore  Cargo.toml  FrontEndDocs.md  README.md  geoid_final_table.py  main.rs  package-lock.json  ucr_crimes.csv  ucr_final.csv
backend/: package-lock.json  package.json  server.js
frontend/: index.html  package-lock.json  package.json
frontend/public/: SearchBar.json  crime_data.csv
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: Carousel.jsx  HeatmapLayer.jsx  Navbar.jsx  SearchBar.css  SearchBar.json  SearchBar.jsx  SearchResultsList.css  SearchResultsList.jsx
frontend/src/pages/: Home.jsx  Map.jsx  Stats.jsx  stats.css
src/: main.rs  pull_ucr.rs  warp_srv.rs
src/hash_db/: Cargo.toml
src/hash_db/src/: main.rs
src/test_db/: Cargo.toml
src/test_db/src/: main.rs
src/user_db/: Cargo.toml
src/user_db/src/: main.rs
