[package]
name = "final_csv_to_db"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
csv = "1.2"
chrono = "0.4"
dotenv = "0.15.0"
native-tls = "0.2.14"
pgdatetime = "0.3.0"
postgres = { version = "0.19.10", features = ["with-chrono-0_4"] }
postgres-native-tls = "0.5.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

tokio = { version = "1.44.1", features = ["full"] }
tokio-postgres = "0.7.13"
url = "2.5.4"
warp = "0.3.7"
